--- a/platformio.ini
+++ b/platformio.ini
@@ -8,8 +8,8 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-[env:esp32doit-devkit-v1]
-platform = espressif32
-board = esp32doit-devkit-v1
+[env:esp32doit-devkit-v1]       ; esp32doit-devkit-v1 or 
+platform = espressif32          ; espressif32 or espressif8266
+board = esp32doit-devkit-v1     ; esp32doit-devkit-v1 or
 framework = arduino
 monitor_speed = 115200
