--- a/platformio.ini
+++ b/platformio.ini
@@ -8,8 +8,8 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-[env:esp32doit-devkit-v1]       ; esp32doit-devkit-v1 or 
-platform = espressif32          ; espressif32 or espressif8266
-board = esp32doit-devkit-v1     ; esp32doit-devkit-v1 or
+[env:nodemcuv2]       ; esp32doit-devkit-v1 or nodemcuv2
+platform = espressif8266          ; espressif32 or espressif8266
+board = nodemcuv2     ; esp32doit-devkit-v1 or nodemcuv2
 framework = arduino
 monitor_speed = 115200
