Add more environments

--- a/platformio.ini
+++ b/platformio.ini
@@ -8,8 +8,26 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-[env:nodemcuv2]       ; esp32doit-devkit-v1 or nodemcuv2
-platform = espressif8266          ; espressif32 or espressif8266
-board = nodemcuv2     ; esp32doit-devkit-v1 or nodemcuv2
+[platformio]
+env_default = esp_wroom_02
+monitor_speed = 115200
+
+[env:nodemcuv2]
+platform = espressif8266
+board = nodemcuv2
+framework = arduino
+monitor_speed = 115200
+
+[env:esp_wroom_02]
+platform = espressif8266
+board = esp_wroom_02
+framework = arduino
+board_build.flash_mode = qio
+board_build.ldscript = eagle.flash.2m128.ld
+monitor_speed = 115200
+
+[env:esp32doit-devkit-v1]
+platform = espressif32
+board = esp32doit-devkit-v1
 framework = arduino
 monitor_speed = 115200
