--- a/platformio.ini
+++ b/platformio.ini
@@ -9,8 +9,7 @@
 ; https://docs.platformio.org/page/projectconf.html
 
 [platformio]
-env_default = esp_wroom_02
-monitor_speed = 115200
+default_envs = esp_wroom_02
 
 [env:nodemcuv2]
 platform = espressif8266
