--- a/platformio.ini
+++ b/platformio.ini
@@ -16,6 +16,7 @@ platform = espressif8266
 board = nodemcuv2
 framework = arduino
 monitor_speed = 115200
+lib_ldf_mode = chain+
 
 [env:esp_wroom_02]
 platform = espressif8266
@@ -24,9 +25,11 @@ framework = arduino
 board_build.flash_mode = qio
 board_build.ldscript = eagle.flash.2m128.ld
 monitor_speed = 115200
+lib_ldf_mode = chain+
 
 [env:esp32doit-devkit-v1]
 platform = espressif32
 board = esp32doit-devkit-v1
 framework = arduino
 monitor_speed = 115200
+lib_ldf_mode = chain+
