--- a/platformio.ini
+++ b/platformio.ini
@@ -27,6 +27,8 @@ framework = arduino
 board_build.flash_mode = qio
 board_build.ldscript = eagle.flash.2m128.ld
 monitor_speed = 115200
+monitor_rts = 0
+monitor_dtr = 1
 lib_ldf_mode = chain+
 
 [env:esp32doit-devkit-v1]
