--- a/platformio.ini
+++ b/platformio.ini
@@ -31,7 +31,7 @@ monitor_speed = 115200
 monitor_rts = 0
 monitor_dtr = 1
 lib_ldf_mode = chain+
-;upload_port = 192.168.178.34
+upload_port = 192.168.178.47
 
 [env:esp32doit-devkit-v1]
 platform = espressif32
