--- a/platformio.ini
+++ b/platformio.ini
@@ -27,6 +27,7 @@ board = esp_wroom_02
 framework = arduino
 board_build.flash_mode = qio
 board_build.ldscript = eagle.flash.2m128.ld
+build_flags = -DBEARSSL_SSL_BASIC
 monitor_speed = 115200
 monitor_rts = 0
 monitor_dtr = 1
